# Overlapped employee  image in payroll # In payrolllRun checkbox width is Reduced to consistent width # Credit Notes fixes # ViewPayroll fix for undefined values #Bug 906: Label name required for Receipt Number and spelling mistake of receipt in placeholder.

--- a/src/screens/payrollemp/screens/create/style.scss
+++ b/src/screens/payrollemp/screens/create/style.scss
@@ -11,6 +11,7 @@ Table, td, th {
 .nav-pills .nav-link.active {
   color: #fff !important;
   background-color: #2064d8  !important;
+  margin-bottom: 1px;
 }
 
   .card-header {
